styles/components/_intro.scss
// Intro page.
.container-video-intro {
  position: relative;

  &.video-no-played {
    .header-inner-content__img {
      width: 100vw !important;
      height: 100vh !important;
      top: auto !important;
      border-radius: 50%;
      margin: 0 !important;
      z-index: 999 !important;

      @media (orientation: portrait) {
        width: 140vh !important;
        height: 140vh !important;
      }

      @media (orientation: landscape) {
        width: 121vw !important;
        height: 121vw !important;
      }
    }

    .content-header__container {
      border-radius: 0%;
      padding: 0;

      &.wrapper {
        height: 100vh;
      }
    }

    .video-paused {
      video {
        opacity: .5;
        transition: opacity 1s;
      }
    }
  }

  .mute_button {
    position: absolute;
    bottom: 50px;
    right: 30px;
    z-index: 101;
    width: 64px;
    height: 64px;
  }

  video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: all 0.2s;

  }

  .video-circle {
    video {
      border-radius: 50%;
      //position: absolute;
      width:400px;
      height: 400px;
    }
  }

  .video-skipped {
    transition: all 0.1s;
    //border-radius: 50%;
  }

  .btn-begin-experience {
    background-color: $color-white;
    border-radius: 50%;
    width: 200px;
    height: 200px;
    box-shadow: $default-box-shadow;
    transition: $default-transition;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: .15em;
    color: $color-black;
    white-space: break-spaces;
    position: absolute;
    bottom: 50%;
    left: 50%;
    transform: translate(-50%, 50%);
    z-index:60;

    &:hover {
      background-color: rgba($color-white, .8);
    }

    &.playing {
      &:hover {
        cursor: default;
      }
    }
  }

  .btn-skip-intro {
    min-width: 108px;
    border-radius: 20px;
    padding: .5em 1em;
    color: $color-black;
    font-size: 14px;
    letter-spacing: .1em;
    text-transform: uppercase;
    background-color: rgba($color-white, .9);
    transition: $default-transition;
    position: fixed;
    top: 50%;
    left: 50%;
    margin-top: 40vh;
    transform: translate(-50%, 50%);
    opacity: 0;
    z-index:60;

    &:hover {
      background-color: rgba($color-white, 1);
    }
  }
}

body.full_video {
  overflow: hidden;
  .header-menu,
  .embla__button,
  .line-separator,
  .actions {
    display: none;
  }
}

